# TinyCTX

./: .dockerignore  .gitignore  CLAUDE.md  CODEBASE.md  Dockerfile  PLAN.md  PLAN_QUEUE.md  README.md  TODO.md  agent.py  agent_loop.py  ai.py  compose.yaml  config.yaml  context.py  contracts.py  example.config.yaml  gateway.py  journal.md  main.py  pyproject.toml  requirements.txt  router.py
.github/workflows/: ci.yml  nightly-release.yml  python-app.yml
TinyCTX/: __main__.py  agent.py  ai.py  context.py  contracts.py  cycle.py  db.py  main.py  module_registry.py  router.py  runtime.py
TinyCTX/commands/: _instance.py  launch.py  onboard.py  restart.py  start.py  status.py  stop.py
TinyCTX/config/: __init__.py  __main__.py
TinyCTX/gateway/: __init__.py  __main__.py
TinyCTX/onboard/: PLAN.md  __main__.py  bridges_setup.py  fix_permissions.py  gateway_setup.py  helpers.py  providers_setup.py  workspace_setup.py
TinyCTX/users/: PLAN.md  __init__.py  models.py  store.py
bridges/: cli.py
cmd/: __main__.py  pid.py
config/: __init__.py  __main__.py
docker/: README.md
gateway/: __main__.py
old/: config.yaml  context.py  registry.py  run.ps1
onboard/: __main__.py  extra.py  providers.json
sandbox/: Dockerfile  Dockerfile.firewall  __main__.py  entrypoint.sh  firewall-init.sh
scripts/: calibrate_embed_threshold.py  cleanup_pins.py  debug_prompt_tokens.py  debugdb.py  invalidate_embeddings.py
tests/: test_agent.py  test_attachment_integration.py  test_attachments.py  test_bm25.py  test_bridges.py  test_cli_bridge.py  test_commands.py  test_config.py  test_context.py  test_contracts.py  test_cron_heartbeat.py  test_ctx_tools.py  test_db.py  test_equipment_manifest.py  test_filesystem_tools.py  test_gateway.py  test_instance.py  test_memory.py  test_memory_integration.py  test_module_registry.py  test_router.py  test_sanitize.py  test_shell.py  test_skills.py  test_subagents.py  test_sysops.py  test_todo.py  test_tool_handler.py  test_tree_refactor.py  test_users_store.py
tinyctx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: attachments.py  bm25.py  commands.py  tool_handler.py
(+152 files in other folders)
